--- a/styles/editor.css
+++ b/styles/editor.css
@@ -92,4 +92,7 @@
         flex-wrap: wrap;
         max-height: calc(100vh - 152px);
     }
+    .lw-ide--default{
+        display: none;
+    }
 }
