--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,9 +1,8 @@
 .lw-ide {
     font-family: 'Roboto Mono', monospace;
-    background: #333;
+    background: rgba(30, 30, 30, .95);
     color: #fff;
-    margin: 1px;
-    border: 2px solid #000;
+    border: 10px solid #000;
     font-size: 1em;
     line-height: 1.5em;
     min-width: calc(50% - 2px);
@@ -78,7 +77,7 @@
     color: #fb0;
 }
 
-.lw-ide__text--method-close,
+.lw-ide__text--method--close,
 .lw-ide__text--method {
     color: #6ef;
 }
@@ -92,7 +91,8 @@
         flex-wrap: wrap;
         max-height: calc(100vh - 152px);
     }
-    .lw-ide--default{
+
+    .lw-ide--default {
         display: none;
     }
 }
