--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,6 +7,16 @@
 
 body {
     padding-top: 40px;
+}
+
+.lw-layout__background {
+    position: fixed;
+    top: -100px;
+    left: -100px;
+    width: calc(100vw + 200px);
+    height: calc(100vh + 200px);
+    transition: transform 1s ease-out;
+    will-change: transform;
     background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAKUlEQVQoU2O8e/fufwYiAOMgUvj+/XuwiwUFBVFcjuFGohXiCoAB9DUAIPsp53cEJkEAAAAASUVORK5CYII=');
 }
 
@@ -45,11 +55,12 @@ body {
     padding: 0 15px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
     box-sizing: border-box;
+    z-index: 2;
 }
 
 .lw-layout__gh-logo {
     height: 30px;
-    margin: 7.5px 0;
+    margin: 7px 0;
     opacity: .6;
 }
 
@@ -58,14 +69,21 @@ body {
 }
 
 .lw-layout__footer {
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
+    display: none;
     padding: 15px 15px 30px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
     background: #fe0;
     width: 100%;
     text-align: center;
     box-sizing: border-box;
+}
+
+.lw-layout__footer--visible {
+    display: block;
+    animation: fadeIn .2s ease-in-out forwards;
 }
 
 .lw-layout__notification {
@@ -75,17 +93,65 @@ body {
     padding: 15px;
     margin-left: -15px;
     width: 100%;
-    background: #040;
+    background: #ea0;
     color: #fff;
+    z-index: 1;
+    animation: fadeIn .4s ease-out;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .lw-layout__article {
-    margin-top: 50px;
+    position: relative;
+    margin: 60px 15px 15px;
     padding: 5px 15px 15px 15px;
-    background: rgba(255, 255, 255, .2);
+    background: rgba(255, 255, 255, .9);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .lw-layout__text--distinct,
 .lw-layout__article__header {
     color: #06f;
+}
+
+.lw-layout__teammate {
+    display: inline-block;
+    animation: teammatesBounce .3s ease-in-out infinite;
+}
+
+.lw-layout__teammate:nth-child(2) {
+    animation-delay: .1s;
+}
+
+.lw-layout__teammate:nth-child(4) {
+    animation-delay: .15s;
+}
+
+.lw-layout__keep-scrolling {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+}
+
+@keyframes teammatesBounce {
+    0% {
+        transform: rotate(80deg);
+    }
+    50% {
+        transform: rotate(90deg);
+    }
+    100% {
+        transform: rotate(80deg);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
