--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     font-size: 14px;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto', SansSerif;
 }
 
 body {
@@ -87,17 +87,20 @@ body {
 }
 
 .lw-layout__notification {
-    position: absolute;
+    position: fixed;
     display: none;
-    top: 100%;
+    top: 45px;
+    left: 0;
     padding: 15px;
-    margin-left: -15px;
     width: 100%;
     background: #ea0;
     color: #fff;
+    font-weight: bold;
+    font-size: 16px;
     z-index: 1;
     animation: fadeIn .4s ease-out;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
+    box-sizing: border-box;
 }
 
 .lw-layout__article {
@@ -115,6 +118,7 @@ body {
 
 .lw-layout__teammate {
     display: inline-block;
+    font-family: 'Roboto Mono', monospace;
     animation: teammatesBounce .3s ease-in-out infinite;
 }
 
